# Automaton-Minimization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AutomatonProject/: CMakeLists.txt  SfmlSprite.cpp  SfmlSprite.h  constant.h  main.cpp  stdafx.h
AutomatonProject/Automaton/: Automaton.cpp  Automaton.h  CMakeLists.txt
AutomatonProject/Automaton/Input/: BaseSettings.h  CMakeLists.txt  Input.h  MatrixSettings.h  ReadLimit.h  ReadVectorMethod.h  VectorSettings.h
AutomatonProject/Automaton/Output/: CMakeLists.txt  Output.h
AutomatonTest/: CMakeLists.txt
AutomatonTest/lib/gtest-1.7.0/samples/: sample1_unittest.cc
AutomatonTest/lib/gtest-1.7.0/scripts/: fuse_gtest_files.py
AutomatonTest/lib/gtest-1.7.0/test/: gtest_main_unittest.cc
AutomatonTest/tests/: CMakeLists.txt  constructorTest.cpp
